<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wit_imu_driver</name>
  <version>0.0.0</version>
  <description>The driver package for IMU produced by WIT Motion</description>
  <maintainer email="strv.analoger@gmail.com">strv</maintainer>
  <license>BSD</license>
  <author email="strv.analoger@gmail.com">strv</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
